kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/todoapp-network: "true"
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: POSTGRES_HOST
              value: postgres_todoapp
          image: backend
          name: backend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
