kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/todoapp-network: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: frontend:latest
          name: frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
